
using Discord;
using Discord.WebSocket;

namespace det_er_fredag.Command;

public class CreateEventCommand : SlashCommand {
    public CreateEventCommand() : base("create-event", "Creates an event") {
        throw new NotImplementedException();
    }

    internal override void Run(SocketSlashCommand command) {
        throw new NotImplementedException();
    }
}